<resources>

	<string name="app_name">TestMultiParty</string>
	<string name="title_activity_login">Sign in</string>

	<string name="prompt_room">Room</string>
	<string name="action_sign_in">Sign in</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>

	<string name="title_activity_multi_party">MultiPartyActivity</string>

	<string name="button_using_skywayconf">Using SkyWay Conference</string>
	<string name="button_using_owngroup">Using Own Group</string>

	<string name="button_polling">Polling</string>
	<string name="button_vp8">H/W VP8</string>

	<string name="button_prev">\u003c</string>
	<string name="button_next">\u003e</string>
	<string name="button_send_message">Send Message</string>
	<string name="button_video">Video</string>
	<string name="button_audio">Audio</string>
	<string name="button_close">Close</string>
	<string name="button_term">Term</string>
	<string name="button_reconnect">Reconnect</string>

</resources>
