<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 xmlns:tools="http://schemas.android.com/tools"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 android:background="#0099cc"
			 tools:context="io.skyway.testmultiparty.MultiPartyActivity">

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAllCaps="false"
		android:id="@+id/btnPrev"
		android:text="@string/button_prev"
		android:layout_centerVertical="true"
		android:layout_alignParentLeft="true"
		android:enabled="true"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/btnNext"
		android:textAllCaps="false"
		android:text="@string/button_next"
		android:layout_centerVertical="true"
		android:layout_alignParentRight="true"
		android:enabled="true"/>

	<ToggleButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAllCaps="false"
		android:text="@string/button_video"
		android:id="@+id/btnVideo"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:enabled="true"
		android:textOn="@string/button_video"
		android:textOff="@string/button_video"/>

	<ToggleButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAllCaps="false"
		android:text="@string/button_audio"
		android:id="@+id/btnAudio"
		android:layout_alignParentTop="false"
		android:enabled="true"
		android:textOn="@string/button_audio"
		android:textOff="@string/button_audio"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/btnVideo"/>


	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAllCaps="false"
		android:id="@+id/btnSendMsg"
		android:text="@string/button_send_message"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"/>

	<TextView
		android:id="@+id/tvMsg"
		android:layout_width="match_parent"
		android:layout_height="160dp"
		android:layout_alignParentBottom="true"
		android:textAllCaps="false"/>

	<LinearLayout
		android:id="@+id/llLocal"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="160dp"
		android:layout_alignParentBottom="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:layout_weight="1">

		</LinearLayout>

		<LinearLayout
			android:layout_width="160dp"
			android:layout_height="match_parent">

			<io.skyway.Peer.Browser.Canvas
				android:id="@+id/cvsLocal"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:clipChildren="true">
			</io.skyway.Peer.Browser.Canvas>

		</LinearLayout>

		<Space
			android:layout_width="8dp"
			android:layout_height="wrap_content"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/llRemote"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<io.skyway.Peer.Browser.Canvas
			android:id="@+id/cvsRemote"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
		</io.skyway.Peer.Browser.Canvas>

	</LinearLayout>

</RelativeLayout>
